# schedule_management

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: ButtonAction.h.4A3BC46C3463DDEC.idx  ExamPage.h.92387F094457697D.idx  FormDialog.h.0384ED15BA83EB71.idx  HeaderBar.h.5869A00851808CEA.idx  IconLabel.h.B08CAEF57AC7A78A.idx  InfoCardList.h.B1E70FB39830B944.idx  MainWindow.h.10CD621AF328EC4F.idx  SideBar.h.48FF979ACAA94FA3.idx  SubmissionPage.h.F7BDA9D1ADB48E47.idx  TeacherPage.h.6FE79BD09456B121.idx  TimeTable.h.F6F4A8592D6B0A2B.idx  TimeTableManager.h.8F3F396B57C5FD9E.idx  TimeTablePage.h.1F304975F0985984.idx
common/: JsonUtils.h  RandomColor.cpp  RandomColor.h
data/: exams.json  submissions.json  teachers.json  time_table.json
model/exam/: Exam.cpp  Exam.h  ExamManager.cpp  ExamManager.h
model/submission/: Submission.cpp  Submission.h  SubmissionManager.cpp  SubmissionManager.h
model/teacher/: Teacher.cpp  Teacher.h  TeacherManager.cpp  TeacherManager.h
model/time_table/: TimeTable.cpp  TimeTable.h  TimeTableManager.cpp  TimeTableManager.h
view/: MainWindow.cpp  MainWindow.h
view/component/button_action/: ButtonAction.cpp  ButtonAction.h
view/component/form_dialog/: FormDialog.cpp  FormDialog.h
view/component/header_bar/: HeaderBar.cpp  HeaderBar.h
view/component/icon_label/: IconLabel.cpp  IconLabel.h
view/component/info_card/: InfoCard.cpp  InfoCard.h  InfoCardList.cpp  InfoCardList.h
view/component/side_bar_menu/: SideBar.cpp  SideBar.h
view/page/exams/: ExamPage.cpp  ExamPage.h
view/page/submissions/: SubmissionPage.cpp  SubmissionPage.h
view/page/teachers/: TeacherPage.cpp  TeacherPage.h
view/page/time_table/: TimeTablePage.cpp  TimeTablePage.h
